fixes sizing on small view port but breaks background on large

--- a/styles.less
+++ b/styles.less
@@ -1,4 +1,18 @@
+@media screen and (min-width: 575px){
+    #phone-container {
+        background: url("images/hero-phone.png") no-repeat;
+        background-size: cover;
+        height: 40em;
+    }
+}
 
+@media screen and (max-width: 575px){
+    #phone-container {
+        background: url("images/coversharks-home-mobile-phone.png") no-repeat;
+        background-size: contain;
+        height: 40em;
+    }
+}
 
 .navbar {
     height: 5em;
